fixed z-index on footer covering up some of the popup elements

--- a/careers/job-search/css/job-search.css
+++ b/careers/job-search/css/job-search.css
@@ -530,3 +530,7 @@ div.content-wrap {
     background: linear-gradient(top,  #484848 0%,#000 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#484848', endColorstr='#000',GradientType=0 ); /* IE6-9 */    
 }
+
+#sticky-footer { 
+  z-index: 1;
+}
